testsuite/veronac/codegen/compile-fail/main-method-missing.out/stderr.txt
main-method-missing.verona:4:7: error: Class 'Main' does not have a 'main' method
class Main { }
      ^~~~
1 error generated
